# finitomata.rs

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
examples/: supervised_fsm.rs  turnstile.rs
finitomata/: Cargo.toml
finitomata/examples/: order_workflow.rs  persistent_fsm.rs
finitomata/src/: cache.rs  callbacks.rs  engine.rs  error.rs  lib.rs  listener.rs  state.rs  supervisor.rs  timer.rs  transition.rs
finitomata/src/parser/: mermaid.rs  mod.rs  plantuml.rs
finitomata/src/persistency/: memory.rs  mod.rs
finitomata/tests/: integration_test.rs
finitomata_macro/: Cargo.toml
finitomata_macro/src/: codegen.rs  lib.rs  parser.rs  validation.rs
