[package]
name = "finitomata"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Finite state machines with rich lifecycle callbacks, persistence, and supervision"
documentation = "https://docs.rs/finitomata"
keywords = ["fsm", "state-machine", "finite-state-machine", "actor", "async"]
categories = ["asynchronous", "concurrency", "rust-patterns", "data-structures"]

[dependencies]
finitomata_macro = { path = "../finitomata_macro", version = "0.1.0" }
tokio.workspace = true
async-trait.workspace = true
dashmap.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
joerl = "0.7.1"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
